--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,15 @@
 
   <body>
 
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=141880232586782&autoLogAppEvents=1';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
@@ -69,6 +78,7 @@
           <h1>Business Name or Tagline</h1>
           <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
           <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+        <div class="fb-like" data-href="https://www.facebook.com/PastimesIthaca/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
         </div>
         <!-- /.col-md-4 -->
       </div>
