--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,8 +70,8 @@
 
       <!-- Heading Row -->
       <div class="row my-4">
-        <div class="col-lg-8">
-          <img class="img-fluid rounded" src="http://placehold.it/900x400" alt="">
+        <div class="col-lg-4">
+          <img class="img-fluid rounded" src="{{site.baseurl}}/assets/img/store.png" alt="">
         </div>
         <!-- /.col-lg-8 -->
         <div class="col-lg-4">
