main text with 2 col location and hours

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,30 +74,76 @@
           <img class="img-fluid rounded" src="{{site.baseurl}}/assets/img/store.png" alt="">
         </div>
         <!-- /.col-lg-8 -->
-        <div class="col-lg-4">
-          <h1>Business Name or Tagline</h1>
-          <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-          <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+        <div class="col-lg-8">
+          <h1 class="pastimes-brand">Pastimes Antiques</h1>
+          <p>Located in the historic Dewitt Building in Ithaca, NY since 1979, Pastimes is a small, colorful shop that's packed with an assortment of fun, affordable antiques and collectibles.</p>
+          <p>We specialize in quality vintage jewelry, vinatge clothes and textiles, turn-of-the century postcards, antique buttons, beads, photography, framed art, political buttons, vinyl records, and paper ephemera. We also carry small furniture, glassware and other household items, bakelite, advertising tins, oddments and curiousities.</p>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+          <address>
+              <strong>Pastimes at DeWitt Mall</strong><br />
+              215 North Cayuga Street<br />
+              Ithaca, NY 14850<br />
+              <abbr title="Phone">P:</abbr>(607) 277-3457
+            </address>
+          </div>
+          <div class="col">
+            <strong>Hours:</strong>
+
+            <ul class="list-unstyled">
+                <li>Monday - Saturday:</li>
+                <ul>
+                  <li>10:00-5:30 (year-round)</li>
+                </ul>
+                <li>Sunday:</li>
+                <ul>
+                  <li>11:00-3:00 (December only)</li>
+                </ul>
+            </ul>
+          </div>
+          </div>
+          </div>
         <div class="fb-like" data-href="https://www.facebook.com/PastimesIthaca/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
         </div>
         <!-- /.col-md-4 -->
       </div>
       <!-- /.row -->
 
-      <!-- Call to Action Well -->
+      <!-- Call to Action Well
       <div class="card text-white bg-secondary my-4 text-center">
         <div class="card-body">
-          <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>
+          <p class="text-white m-0">{{ site.description }}
+          </p>
         </div>
       </div>
+       -->
 
       <!-- Content Row -->
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Card One</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+              <h2 class="card-title">Location and Hours</h2>
+              <p class="card-text">Pastimes is in Ithaca, New York, on the ground floor of the DeWitt Mall.</p>
+              <address>
+                <strong>Pastimes at DeWitt Mall</strong><br />
+                215 North Cayuga Street<br />
+                Ithaca, NY 14850<br />
+                <abbr title="Phone">P:</abbr>(607) 277-3457
+              </address>
+              <strong>Hours:</strong>
+
+              <ul class="list-unstyled">
+                  <li>Monday - Saturday:</li>
+                  <ul>
+                    <li>10:00-5:30 (year-round)</li>
+                  </ul>
+                  <li>Sunday:</li>
+                  <ul>
+                    <li>11:00-3:00 (December only)</li>
+                  </ul>
+              </ul>
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">More Info</a>
