location and hours col

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -213,8 +213,18 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Card Three</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+              <h2 class="card-title">Location / Hours</h2>
+              <p class="card-text">Pastimes is in Ithaca, New York, on the ground floor of the DeWitt Mall.</p>
+              <address>
+                <strong>DeWitt Mall</strong><br />
+                215 North Cayuga Street<br />
+                Ithaca, NY 14850<br />
+                <abbr title="Phone">P:</abbr>(607) 277-3457
+              </address>
+              <strong>Hours:</strong>
+
+              <p class="card-text">Monday - Saturday: 10:00-5:30 (year-round)<br />
+                Sunday: 11:00-3:00 (December only)</p>
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">More Info</a>
@@ -241,6 +251,6 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  </body>
+ </body>
 
 </html>
