--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/small-business.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/small-business.css" rel="stylesheet">
 
   </head>
 
