--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,17 +48,16 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="/#gallery">Gallery</a>
+              </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/#buying">Buying</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="/#contact">Contact</a>
             </li>
           </ul>
         </div>
