contact link not form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,13 +107,17 @@
                   <div class="fb-like" data-href="https://www.facebook.com/PastimesIthaca/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
               </div>
             </div>
-        </div>
           </div>
+          <a id="contact"></a>
+          <h2 class="pastimes-brand">Contact Us</h2>
+		<p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com">contact us by email</a>
+		 or call us during business hours at (607)-277-3457.</p>
+        </div>
         <!-- /.col-md-4 -->
         <div class="col-lg-5">
             {% include im-musicians.html %}
-          </div>
         </div>
+      </div>
       <!-- /.row -->
 
       <!-- Call to Action Well
