move Buying to separate file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,47 +135,9 @@
         <div class="col-md-8 mb-8">
           <div class="card h-100">
             <div class="card-body">
+              <a id="buying"></a>
               <h2 class="card-title">Buying</h2>
-
-                 <strong>Jewelry</strong>
-
-                 <p class="card-text">We buy gold, silver, and costume jewelry from the 19th and 20th centuries. We especially like southwestern, art nouveau, art deco, bakelite, enamel, hand-painted, and signed jewelry.</p>
-                  <strong>Vintage Clothing</strong>
-
-                  <p class="card-text">We buy women's and men's vintage clothing in good condition from the 19th century through the 1990's. Bring in a single item or a trunkful!</p>
-                  <p class="card-text">Vintage Textiles
-
-                  We buy vintage and antique quilts, blankets, fabrics, ribbons, lace and other trim, and table- and bed- linens.
-                  Toys
-
-                  We buy vintage and antique toys and children's book from the 19th and 20th centuries. We especially like doolhouses, dollhouse furniture, and other miniatures.
-                  Buttons
-
-                  We also buy antique buttons. We are looking for collections of 19th century buttons that would include picture buttons, enamels, glass and metal in sets, large or carved pearl, vegetable ivory, original cards, etc. From the 20th century we buy deco, bakelite, and realistics.
-                  Photos
-
-                  Photographic items that we are interested in include Ithaca and Tompkins County NY, occupations, commercial vehicles and stores, twins, western and Native Americans, Civil War, etc.
-                  Advertising
-
-                  Also buying small advertising items including tins, mirrors, premiums, giveaways, catalogs.
-                  Pinback Buttons
-                  Political and Militaria
-
-                  We are looking for 19th and 20th century political and military items: pins, ribbons, paper, etc.
-                  Postcards
-
-                  We are always looking for American postcards from 1905 thru 1915. These can be view cards or holiday cards and must be in excellent condition. We do not buy foreign cards, except expositions and signed artist cards.
-
-                  We are particularly interested in the following kinds of postcards:
-                  - Photo Cards - real photos of Tompkins county (Ithaca, Groton, Dryden, Freeville, Caroline, Trumansburg, Slaterville Springs, Newfield, and Enfield), real photo cards of train stations, store interiors and exteriors, Native Americans, cowboys, circus freaks, people in their occupations, children with dolls, bears or other toys, aviation, commercial vehicles, African or Asian-Americans, and anything unusual or unique.
-                  - Other - Santas, Halloweens, Hold-to-the-light, mechanical, installments, exposition, political.
-
-                  If you have anything to sell, let us know. We are interested in quality cards of all types. Let us know what you have or send us non-returnable xeroxes. Cards must be old and in excellent condition.
-
-                  - Important - Do not send cards through the mail without our prior approval. We cannot guarantee the return of items sent without this authorization.
-                  Miscellaneous
-
-                  We would also like to buy antiques/collectibles such as picture records, cast iron banks, antique playing cards, old games, and paper ephemera.</p>
+                {% include buying.html %}
             </div>
             <div class="card-footer">
                 <a href="#" class="btn btn-primary">More Info</a>
