add offset for anchors to dodge floating nav bar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -17,3 +17,16 @@ h1,h2 {
 .navbar-brand, .navbar-nav {
   font-family: 'ZCOOL XiaoWei', serif !important;
 }
+
+// For modern browsers, just add the CSS3 :target selector to the page.
+// This will apply to all the anchors automatically.
+// ref: http://stackoverflow.com/a/21707103/6220029
+// http://darktef.github.io/posts/2017-03-offset-html-anchors-for-fixed-header-with-css
+// for use with anchor <a id='contact></a>
+
+:target {
+  display: block;
+  position: relative;
+  top: -60px;
+  visibility: hidden;
+}
