--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,53 +127,88 @@
        -->
 
       <!-- Content Row -->
+      <a id="gallery"></a>
+      <div class="album py-5 bg-light">
+          <div class="container">
 
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <div class="card-body">
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      </div>
+                      <small class="text-muted">9 mins</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <div class="card-body">
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      </div>
+                      <small class="text-muted">9 mins</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <div class="card-body">
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      </div>
+                      <small class="text-muted">9 mins</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
 
-        <div class="col-md-8 mb-8">
+        <div class="col-md-12 mb-12">
           <div class="card h-100">
             <div class="card-body">
               <a id="buying"></a>
               <h2 class="card-title">Buying</h2>
                 {% include buying.html %}
             </div>
-            <div class="card-footer">
-                <a href="#" class="btn btn-primary">More Info</a>
-            </div>
           </div>
         </div>
         <!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
+
+      <!-- /.row -->
+      <div class="col-md-12 mb-12">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Location / Hours</h2>
-              <p class="card-text">Pastimes is in Ithaca, New York, on the ground floor of the DeWitt Mall.</p>
-              <address>
-                <strong>DeWitt Mall</strong><br />
-                215 North Cayuga Street<br />
-                Ithaca, NY 14850<br />
-                <abbr title="Phone">P:</abbr>(607) 277-3457
-              </address>
-              <strong>Hours:</strong>
-
-              <p class="card-text">Monday - Saturday: 10:00-5:30 (year-round)<br />
-                Sunday: 11:00-3:00 (December only)</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">More Info</a>
-            </div>
               <a id="contact"></a>
               <h2 class="pastimes-brand">Contact Us</h2>
               <p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com">contact us by email</a>
               or call us during business hours at (607)-277-3457.</p>
           </div>
         </div>
-        <!-- /.col-md-4 -->
-
       </div>
-      <!-- /.row -->
 
     </div>
     <!-- /.container -->
+
+
+
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
