change format of hours display

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,16 +87,8 @@
               </div>
               <div class="col">
                 <strong>Hours:</strong>
-                <ul class="list-unstyled">
-                    <li>Monday - Saturday:</li>
-                    <ul>
-                      <li>10:00-5:30 (year-round)</li>
-                    </ul>
-                    <li>Sunday:</li>
-                    <ul>
-                      <li>11:00-3:00 (December only)</li>
-                    </ul>
-                </ul>
+                    <p>Monday - Saturday: 10:00-5:30</p>
+                    <p>Sunday (December only): 11:00-3:00</p>
               </div>
             </div>
             <div class="row mt-3 mb-3">
