add subject to mailto link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,7 +190,7 @@
             <div class="card-body">
               <a id="contact"></a>
               <h2 class="pastimes-brand">Contact Us</h2>
-              <p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com">contact us by email</a>
+              <p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com?subject=Pastimes Web Site&body=Start my email.">contact us by email</a>
               or call us during business hours at (607)-277-3457.</p>
           </div>
         </div>
