include metadata for page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,7 @@
      <link href='http://fonts.googleapis.com/css?family=ZCOOL+XiaoWei:400,300,700' rel='stylesheet' type='text/css'>
      <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
 
-
-
-
+    {% include json-ld.html %}
 
     <!-- Bootstrap core CSS -->
     <link href="{{ site.baseurl }}/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
