simplify hours and address

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,25 +68,22 @@
       <!-- Heading Row -->
       <div class="row my-5">
         <!-- /.col-lg-8 -->
-        <div class="col-lg-7">
+        <div class="col-lg-4">
           <h1 class="pastimes-brand">Pastimes Antiques</h1>
           <p>Located in the historic Dewitt Building in Ithaca, NY since 1979, Pastimes is a small, colorful shop that's packed with an assortment of fun, affordable antiques and collectibles.</p>
           <p>We specialize in quality vintage jewelry, vinatge clothes and textiles, turn-of-the century postcards, antique buttons, beads, photography, framed art, political buttons, vinyl records, and paper ephemera. We also carry small furniture, glassware and other household items, bakelite, advertising tins, oddments and curiousities.</p>
-          <div class="container">
-            <div class="row">
-              <div class="col">
+              <div>
                 <address>
                 <strong>Pastimes at DeWitt Mall</strong><br />
                 215 North Cayuga Street<br />
                 Ithaca, NY 14850<br />
                 <abbr title="Phone">P:</abbr>(607) 277-3457
                 </address>
-                <a href="https://www.google.com/maps/place/Pastimes/@42.440872,-76.5009907,17z/data=!3m1!4b1!4m5!3m4!1s0x89d0819cc771239f:0xa7f3bfb814d11e6e!8m2!3d42.440872!4d-76.498802" title="map and directions to Pastimes">Map and Directions</a>
+                <p><a href="https://www.google.com/maps/place/Pastimes/@42.440872,-76.5009907,17z/data=!3m1!4b1!4m5!3m4!1s0x89d0819cc771239f:0xa7f3bfb814d11e6e!8m2!3d42.440872!4d-76.498802" title="map and directions to Pastimes">Map and Directions</a></p>
               </div>
-              <div class="col">
+              <div>
                 <strong>Hours:</strong>
-                    <p>Monday - Saturday: 10:00-5:30</p>
-                    <p>Sunday (December only): 11:00-3:00</p>
+                    <p>Monday - Saturday: 10:00-5:30<br />Sunday (December only): 11:00-3:00</p>
               </div>
             </div>
             <div class="row mt-3 mb-3">
