move contact before fb links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,20 +85,19 @@
                 <strong>Hours:</strong>
                     <p>Monday - Saturday: 10:00-5:30<br />Sunday (December only): 11:00-3:00</p>
               </div>
-            </div>
-            <div class="row mt-3 mb-3">
-              <div class="col">
-                  <a href="https://www.facebook.com/PastimesIthaca/" title="go to Pastimes on Facebook" ><img src="{{ site.baseurl }}/assets/img/facebook-20.png" alt="facebook icon">&nbsp;Visit our Facebook page.</a>
-              </div>
-              <div class="col">
-                  <div class="fb-like" data-href="https://www.facebook.com/PastimesIthaca/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-              </div>
-            </div>
-          </div>
+              <div>
+            <a id="contact"></a>
+            <h2>Contact:</h2>
+                <p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com?subject=Contacting Pastimes&nbsp;Antiques via Web Site&body=Thanks for contacting Pastimes Antiques!">contact us by email</a>
+                    or call us during business hours at (607)-277-3457.</p>
 
-        </div>
+                <a href="https://www.facebook.com/PastimesIthaca/" title="go to Pastimes on Facebook" ><img src="{{ site.baseurl }}/assets/img/facebook-20.png" alt="facebook icon">&nbsp;Visit our Facebook page.</a>
+
+                <div class="fb-like" data-href="https://www.facebook.com/PastimesIthaca/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+              </div>
+            </div>
         <!-- /.col-md-4 -->
-        <div class="col-lg-5">
+        <div class="col-lg-8">
             {% include im-musicians.html %}
         </div>
       </div>
