--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,81 +113,18 @@
        -->
 
       <!-- Content Row -->
-      <a id="gallery"></a>
-      <div class="album py-5 bg-light">
-          <div class="container">
-
-            <div class="row">
-              <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                  <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      </div>
-                      <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                  <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      </div>
-                      <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                  <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      </div>
-                      <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-      </div>
-
-        <div class="col-md-12 mb-12">
-          <div class="card h-100">
-            <div class="card-body">
-              <a id="buying"></a>
-              <h2 class="card-title">Buying</h2>
-                {% include buying.html %}
-            </div>
-          </div>
-        </div>
+          <a id="buying"></a>
+          <h2 class="card-title">Buying</h2>
+          {% include buying.html %}
         <!-- /.col-md-4 -->
 
       <!-- /.row -->
-      <div class="col-md-12 mb-12">
-          <div class="card h-100">
-            <div class="card-body">
-              <a id="contact"></a>
-              <h2 class="pastimes-brand">Contact Us</h2>
-              <p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com?subject=Pastimes Web Site&body=Start my email.">contact us by email</a>
-              or call us during business hours at (607)-277-3457.</p>
-          </div>
-        </div>
+
+
+      <div class="mt-3">
+        <a id="gallery"></a>
+        <h2>Gallery</h2>
+        {% include image-gallery.html folder="/assets/pastimes-photos/original" %}
       </div>
 
     </div>
