add site.baseurl for nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,13 @@
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/#contact">Contact</a>
+              <a class="nav-link" href="{{ site.baseurl }}/#contact">Contact</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/#buying">Buying</a>
+              <a class="nav-link" href="{{ site.baseurl }}/#buying">Buying</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/#gallery">Gallery</a>
+                <a class="nav-link" href="{{ site.baseurl }}/#gallery">Gallery</a>
             </li>
           </ul>
         </div>
