fix opening hours and email in metadata

--- a/_includes/json-ld.html
+++ b/_includes/json-ld.html
@@ -4,6 +4,7 @@
     "@type": "Store",
     "name": "Pastimes Antiques",
     "url": "http://pastimes.com",
+    "email": "mailto:mail@pastimes.com",
     "image": "http://pastimes.com/images/store.png",
     "description": "Ithaca's fun and affordable antiques shop, est. 1979",
     "address": {
