--- a/_includes/buying.html
+++ b/_includes/buying.html
@@ -1,39 +1,27 @@
 
-<p><strong>Jewelry</strong> We buy gold, silver, and costume jewelry from the 19th and 20th centuries. We especially like southwestern, art nouveau, art deco, bakelite, enamel, hand-painted, and signed jewelry.</p>
-
-<p><strong>Vintage Clothing</strong> We buy women's and men's vintage clothing in good condition from the 19th century through the 1990's. Bring in a single item or a trunkful!</p>
-
-<p><strong>Vintage Textiles</strong> We buy vintage and antique quilts, blankets, fabrics, ribbons, lace and other trim, and table- and bed- linens.</p>
-
-<p><strong>Toys</strong> We buy vintage and antique toys and children's book from the 19th and 20th centuries. We especially like doolhouses, dollhouse furniture, and other miniatures.</p>
-
-<p><strong>Buttons</strong> We also buy antique buttons. We are looking for collections of 19th century buttons that would include picture buttons, enamels, glass and metal in sets, large or carved pearl, vegetable ivory, original cards, etc. From the 20th century we buy deco, bakelite, and realistics.
+<p>Do you have old treasures you’d like to sell? We invite you to email photos to <a href="mailto:mail@pastimes.com">mail@pastimes.com</a> or call (607)-277-3457 for an appointment with a buyer.
 </p>
+<p>Things we’re looking for:</p>
 
-<p><strong>Photos</strong> Photographic items that we are interested in include Ithaca and Tompkins County NY, occupations, commercial vehicles and stores, twins, western and Native Americans, Civil War, etc.
+<p><strong>Jewelry</strong> We buy gold, silver, and costume jewelry from the 19th and 20th centuries. We especially like southwestern, art nouveau, art deco, enamel, hand-painted, and signed jewelry.
 </p>
-
-<p><strong>Advertising</strong> Also buying small advertising items including tins, mirrors, premiums, giveaways, catalogs.
+<p><strong>Vintage Clothing</strong> We buy women's and men's vintage clothing in good condition from the 19th century through the 1980's. Bring in a single item or a trunkful!
 </p>
-
-<p><strong>Pinback Buttons - Political and Militaria</strong> We are looking for 19th and 20th century political and military items: pins, ribbons, paper, etc.
+<p><strong>Vintage Textiles</strong> We buy vintage and antique quilts, tapestries, blankets, fabrics, ribbons, table and bed linens, lace and trim.
 </p>
-
-<p><strong>Postcards</strong> We are always looking for American postcards from 1905 thru 1915. These can be view cards or holiday cards and must be in excellent condition. We do not buy foreign cards, except expositions and signed artist cards.
+<p><strong>Art</strong> We buy interesting old framed and unframed oil paintings, watercolors, prints, posters, sculptures, carvings, folk art, and travel souvenirs from days gone by.
 </p>
-
-<ul>
-  <li>We are particularly interested in the following kinds of postcards:</li>
-  <ul>
-    <li>Photo Cards - real photos of Tompkins county (Ithaca, Groton, Dryden, Freeville, Caroline, Trumansburg, Slaterville Springs, Newfield, and Enfield), real photo cards of train stations, store interiors and exteriors, Native Americans, cowboys, circus freaks, people in their occupations, children with dolls, bears or other toys, aviation, commercial vehicles, African or Asian-Americans, and anything unusual or unique.</li>
-    <li>Other - Santas, Halloweens, Hold-to-the-light, mechanical, installments, exposition, political.</li>
-  </ul>
-</ul>
-<p>If you have anything to sell, let us know. We are interested in quality cards of all types. Let us know what you have or send us non-returnable xeroxes. Cards must be old and in excellent condition.
+<p><strong>Postcards</strong> We are always looking for American postcards from 1905 thru 1915 in excellent condition. .
 </p>
-
-<p><strong>- Important -</strong> Do not send cards through the mail without our prior approval. We cannot guarantee the return of items sent without this authorization.
+<p><strong>Toys</strong> We buy vintage and antique toys, games, and children's books. We especially like dollhouses, dollhouse furniture, and other miniatures.
 </p>
-<p><strong>Miscellaneous</strong> We would also like to buy antiques/collectibles such as picture records, cast iron banks, antique playing cards, old games, and paper ephemera.
+<p><strong>Buttons</strong> We buy 19th and early 20th century buttons including picture buttons, enamels, glass, metal, large or carved mother of pearl, vegetable ivory, deco, bakelite, and realistics.
 </p>
-
+<p><strong>Photos</strong> We seek old photographs, tintypes, daguerreotypes, and ambrotypes, the more interesting and unusual the subject matter the better.
+</p>
+<p><strong>Advertising</strong> We like small advertising items including tins, mirrors, premiums, giveaways, catalogs. blotters, etc.
+</p>
+<p><strong>Pinback Buttons</strong> Political and Militaria We are looking for 19th and 20th century political and military items: pins, ribbons, paper, etc.
+</p>
+<p><strong>Miscellaneous</strong> We would also like to buy interesting antiques/collectibles such as boxes, candlesticks, flatware, silver items, pens, ink wells, perfume bottles, cast iron banks, and paper ephemera.
+</p>
