--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
               <a class="nav-link" href="{{ site.baseurl }}/#contact">Contact</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="{{ site.baseurl }}/#buying">Buying</a>
+              <a class="nav-link" href="{{ site.baseurl }}/#buying">We Buy</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="{{ site.baseurl }}/#gallery">Gallery</a>
