--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,10 +69,11 @@
       <div class="row my-5">
         <!-- /.col-lg-8 -->
         <div class="col-lg-4">
-          <h1 class="pastimes-brand">Pastimes Antiques</h1>
-          <p>Located in the historic Dewitt Building in Ithaca, NY since 1979, Pastimes is a small, colorful shop that's packed with an assortment of fun, affordable antiques and collectibles.</p>
-          <p>We specialize in quality vintage jewelry, vinatge clothes and textiles, turn-of-the century postcards, antique buttons, beads, photography, framed art, political buttons, vinyl records, and paper ephemera. We also carry small furniture, glassware and other household items, bakelite, advertising tins, oddments and curiousities.</p>
-              <div>
+          <h1 class="pastimes-brand">Pastimes</h1>
+          <p>Pastimes is a small, colorful shop packed with an ever-changing array of useful and beautiful vintage and antique items.</p>
+          <p>We specialize in antique and vintage jewelry, clothing, art, textiles, ephemera, and early postcards. We also carry early buttons, beads, antique photographs, silver, pins and medals, vinyl records, toys, furniture, glassware, other household items, and various unexpected oddments and curiosities.</p>
+          <p>Pastimes is located in downtown Ithaca in <a href="http://www.thedewittmall.com/" alt="Dewitt Mall web site">The Dewitt Mall</a>, a historic building that houses two great restaurants and a variety of unique shopping venues.</p>
+          <div>
                 <address>
                 <strong>Pastimes at DeWitt Mall</strong><br />
                 215 North Cayuga Street<br />
