--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,10 +75,10 @@
           <p>Pastimes is located in downtown Ithaca in <a href="http://www.thedewittmall.com/" alt="Dewitt Mall web site">The Dewitt Mall</a>, a historic building that houses two great restaurants and a variety of unique shopping venues.</p>
           <div>
                 <address>
-                <strong>Pastimes at DeWitt Mall</strong><br />
+                <strong>Address:</strong><br />
+                <a href="http://www.thedewittmall.com/" alt="Dewitt Mall web site">Dewitt Mall</a><br />
                 215 North Cayuga Street<br />
                 Ithaca, NY 14850<br />
-                <abbr title="Phone">P:</abbr>(607) 277-3457
                 </address>
                 <p><a href="https://www.google.com/maps/place/Pastimes/@42.440872,-76.5009907,17z/data=!3m1!4b1!4m5!3m4!1s0x89d0819cc771239f:0xa7f3bfb814d11e6e!8m2!3d42.440872!4d-76.498802" title="map and directions to Pastimes">Map and Directions</a></p>
               </div>
