--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
               </div>
               <div>
                 <strong>Hours:</strong>
-                    <p>Monday - Saturday: 10:00-5:30<br />Sunday (December only): 11:00-3:00</p>
+                    <p>Monday - Friday: 10:30 AM - 6:00 PM<br />Saturday: 11:00 AM - 5:30 PM<br />Sunday (December only): 11:00 AM - 3:00 PM</p>
               </div>
               <div>
             <a id="contact"></a>
