--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,9 +88,9 @@
               </div>
               <div>
             <a id="contact"></a>
-            <h2>Contact:</h2>
-                <p> We welcome your comments and questions! Please feel free to <a href="mailto:mail@pastimes.com?subject=Contacting Pastimes&nbsp;Antiques via Web Site&body=Thanks for contacting Pastimes Antiques!">contact us by email</a>
-                    or call us during business hours at (607)-277-3457.</p>
+            <strong>Contact:</strong>
+                <p>Email: <a href="mailto:mail@pastimes.com?subject=Contacting Pastimes&nbsp;Antiques via Web Site&body=Thanks for contacting Pastimes Antiques!">mail@pastimes.com</a><br />
+                  Phone: (607)-277-3457</p>
 
                 <a href="https://www.facebook.com/PastimesIthaca/" title="go to Pastimes on Facebook" ><img src="{{ site.baseurl }}/assets/img/facebook-20.png" alt="facebook icon">&nbsp;Visit our Facebook page.</a>
 
