where to enter mall

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,7 @@
                 <a href="http://www.thedewittmall.com/" alt="Dewitt Mall web site">Dewitt Mall</a><br />
                 215 North Cayuga Street<br />
                 Ithaca, NY 14850<br />
+                <em>(Enter mall on Seneca or Buffalo Street)</em>
                 </address>
                 <p><a href="https://www.google.com/maps/place/Pastimes/@42.440872,-76.5009907,17z/data=!3m1!4b1!4m5!3m4!1s0x89d0819cc771239f:0xa7f3bfb814d11e6e!8m2!3d42.440872!4d-76.498802" title="map and directions to Pastimes">Map and Directions</a></p>
               </div>
