change type to LocalBusiness

--- a/_includes/json-ld.html
+++ b/_includes/json-ld.html
@@ -1,7 +1,7 @@
 <script type='application/ld+json'>
   {
     "@context": "http://www.schema.org",
-    "@type": "Store",
+    "@type": "LocalBusiness",
     "name": "Pastimes Antiques",
     "url": "http://pastimes.com",
     "email": "mailto:mail@pastimes.com",
