--- a/_includes/buying.html
+++ b/_includes/buying.html
@@ -21,7 +21,7 @@
 </p>
 <p><strong>Advertising</strong> We like small advertising items including tins, mirrors, premiums, giveaways, catalogs. blotters, etc.
 </p>
-<p><strong>Pinback Buttons</strong> Political and Militaria We are looking for 19th and 20th century political and military items: pins, ribbons, paper, etc.
+<p><strong>Pinback Buttons, Political and Militaria</strong> We are looking for 19th and 20th century political and military items: pins, ribbons, paper, etc.
 </p>
-<p><strong>Miscellaneous</strong> We would also like to buy interesting antiques/collectibles such as boxes, candlesticks, flatware, silver items, pens, ink wells, perfume bottles, cast iron banks, and paper ephemera.
+<p><strong>Miscellaneous</strong> We are interested in antiques/collectibles including boxes, candlesticks, flatware, silver, pens, ink wells, perfume bottles, pocket knives, paper ephemera, and other unique items.
 </p>
