store to localbusiness

--- a/_includes/json-ld.html
+++ b/_includes/json-ld.html
@@ -1,8 +1,8 @@
 <script type='application/ld+json'>
   {
     "@context": "http://www.schema.org",
-    "@type": "Store",
-    "name": "Pastimes Antiques",
+    "@type": "LocalBusiness",
+    "name": "Pastimes",
     "url": "http://pastimes.com",
     "email": "mailto:mail@pastimes.com",
     "image": "http://pastimes.com/images/store.png",
