--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -5,6 +5,11 @@
   .image-gallery a img {width: 100%; display: block;}
 </style>
 
+{% assign baseurl = site.baseurl %}
+{% if site.baseurl.size > 0 %}
+  {% assign baseurl = baseurl | append : "/" %}
+{% endif %}
+
 <div class="image-gallery">
   {% for file in site.static_files %}
     {% if file.path contains include.folder %}
@@ -15,10 +20,10 @@
 
         {% assign filenameparts = file.path | split: "/" %}
         {% assign filename = filenameparts | last | replace: file.extname,"" %}
-        {% assign tumbnail = file.path | replace: "original", "w300square" %}
+        {% assign thumbnail = file.path | replace: "original", "w300square" %}
 
-        <a href="{{ site.baseurl }}/{{ file.path }}" title="{{ filename }}">
-          <img src="{{ site.baseurl }}/{{ tumbnail }}" alt="{{ filename }}" />
+        <a href="{{ baseurl }}{{ file.path }}" title="{{ filename }}">
+          <img src="{{ baseurl }}{{ thumbnail }}" alt="{{ filename }}">
         </a>
       {% endif %}
     {% endif %}
