change front photo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
             </div>
         <!-- /.col-md-4 -->
         <div class="col-lg-7">
-            {% include im-musicians.html %}
+            {% include im-store.html %}
         </div>
       </div>
       <!-- /.row -->
