--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -11,21 +11,11 @@
 {% endif %}
 
 <div class="image-gallery">
-  {% for file in site.static_files reversed %}
-    {% if file.path contains include.folder %}
-      {% if file.extname == '.jpg' or
-        file.extname == '.jpeg' or
-        file.extname == '.JPG' or
-        file.extname == '.JPEG' %}
-
-        {% assign filenameparts = file.path | split: "/" %}
-        {% assign filename = filenameparts | last | replace: file.extname,"" %}
-        {% assign thumbnail = file.path | replace: "original", "w300square" %}
-
-        {% include img-full.html filepath=file.path filename=filename %}
-            {% include img-thumb.html filepath=file.path filename=filename %}
-        </a>
-      {% endif %}
-    {% endif %}
+  {% for photo in site.photos %}
+    {% assign page_path = baseurl | append: "/photos/" | append: photo.pid | append: ".html" %}
+    {% assign image_path = baseurl | append: "/assets/pastimes-photos/original/" | append: photo.filename %}
+    <a href="{{ page_path }}">
+        {% include img-thumb.html filepath=image_path filename=photo.title %}
+    </a>
   {% endfor %}
   </div>
