--- a/_includes/img-full.html
+++ b/_includes/img-full.html
@@ -14,4 +14,6 @@
   {% assign srcset = path | append: " " | append: size | append: "w" | split: "|" %}
   {% assign srcsets = srcsets | concat: srcset %}
 {% endfor %}
-<a href="{{ include.filepath }}" title="{{ include.filename }}" srcset="{{ srcsets | join: ', ' }}" src="{{ srcset }}" alt="{{ include.filename }}">
+<div class="imgbox">
+<img class="center-fit" srcset="{{ srcsets | join: ', ' }}" src="{{ include.filepath }}" alt="{{ include.filename }}">
+</div>
