--- a/_includes/img-thumb.html
+++ b/_includes/img-thumb.html
@@ -14,4 +14,5 @@
   {% assign srcset = path | append: " " | append: size | append: "w" | split: "|" %}
   {% assign srcsets = srcsets | concat: srcset %}
 {% endfor %}
-<img srcset="{{ srcsets | join: ', ' }}" src="{{ srcset }}" alt="{{ include.filename }}">
+{% assign srcimage = include.filepath | replace: "original", "square300" %}
+<img srcset="{{ srcsets | join: ', ' }}" src="{{ srcimage }}" alt="{{ include.filename }}">
