--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,32 +44,7 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand pastimes-brand" href="#">Pastimes Antiques</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ site.baseurl }}/#contact">Contact</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ site.baseurl }}/#buying">We Buy</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ site.baseurl }}/#gallery">Gallery</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    {% include navigation.html %}
 
     <!-- Page Content -->
     <div class="container">
