--- a/_layouts/photos.html
+++ b/_layouts/photos.html
@@ -31,11 +31,51 @@
     <!-- Custom styles for this template -->
     <link href="{{ site.baseurl }}/css/small-business.css" rel="stylesheet">
 
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 80vh;
+            margin: auto;
+        }
+    </style>
+
   </head>
 
   <body>
+    {% include navigation.html %}
+
     {{ content }}
-    {% include img-full.html filepath="/assets/pastimes-photos/original/img_4016.jpg" filename="img_4016.jpg" %}
+    <nav aria-label="Image navigation">
+        <ul class="pagination justify-content-center">
+        {% if page.previous_pid > "0" %}
+          {% assign prev = page.url | replace: page.pid, page.previous_pid %}
+          <li class="page-item"><a class="page-link" href="{{ prev }}">Previous</a></li>
+        {% else %}
+          <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+        {% endif %}
+        {% if page.next_pid > "0" %}
+          {% assign next = page.url | replace: page.pid, page.next_pid %}
+          <li class="page-item"><a class="page-link" href="{{ next }}">Next</a></li>
+        {% else %}
+          <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+        {% endif %}
+        </ul>
+      </nav>
+    {% assign filepathv = site.baseurl | append: "/assets/pastimes-photos/original/" | append: page.filename %}
+    {% assign filenamev = page.title %}
+    <div class="row">
+      <div class="col-lg-12">
+        {% include img-full.html filepath=filepathv filename=filenamev %}
+      </div>
+    </div>
   </body>
 
   </html>
