--- a/_layouts/photos.html
+++ b/_layouts/photos.html
@@ -39,11 +39,15 @@
         .imgbox {
             display: grid;
             height: 100%;
+            margin-top: -16px;
         }
         .center-fit {
             max-width: 100%;
-            max-height: 80vh;
             margin: auto;
+        }
+        .picture-full {
+          object-position: center top;
+          object-fit: contain;
         }
     </style>
 
