--- a/_layouts/photos.html
+++ b/_layouts/photos.html
@@ -75,10 +75,14 @@
       </nav>
     {% assign filepathv = site.baseurl | append: "/assets/pastimes-photos/original/" | append: page.filename %}
     {% assign filenamev = page.title %}
+    <div class="container">
     <div class="row">
-      <div class="col-lg-12">
-        {% include img-full.html filepath=filepathv filename=filenamev %}
+      <div class="span4"></div>
+      <div class="span4">
+      {% include picture-full.html filepath=filepathv filename=filenamev %}
       </div>
+      <div class="span4"></div>
+    </div>
     </div>
   </body>
 
