--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
+    <link href="{{ site.baseurl }}/assets/css/styles.css">
      <link href='//fonts.googleapis.com/css?family=ZCOOL+XiaoWei:400,300,700' rel='stylesheet' type='text/css'>
      <link href='//fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
 
